Fix panel appearing behind results

--- a/apps/modernization-ui/src/components/ButtonActionMenu/buttonActionMenu.module.scss
+++ b/apps/modernization-ui/src/components/ButtonActionMenu/buttonActionMenu.module.scss
@@ -26,7 +26,7 @@
             font-weight: 400;
             font-size: 1rem;
             text-align: left;
-            width: 100%;
+            width: 15.25rem;
             border-radius: 0;
             &:first-of-type {
                 border-top: none;
